test/resources/parser/failing/testOperandVal4.scala
object ValAsLogicalOperand {
  true && val b: Boolean = false; b
}